wwr/styles/rafting.css
@import url('https://fonts.googleapis.com/css2?family=Kalam&family=Montserrat:wght@300&display=swap');
:root{
    --primary-color: #FFF7EB;
    --secondary-color: #AFD2E9;
    --accent1-color: #ddb278;
    --accent2-color: #3588C0;

    --heading-font: 'Rahdhani', sans sarif;
    --paragraph-font: 'Kalam', handwritting;

    --nav-background-color: #FFF7EB;
    --nav-link-color: #AFD2E9;
    --nav-hover-link-color: #3588C0;
    --nav-hover-background-color: #ddb278;
}
/*Rafting logo & nav links*/
header {
    max-width: 100%;
    background-color: #3588c0;
    display: grid;
    grid-template-columns: 1fr 4fr;
    padding-top: 15px;
}
header nav {
    font-size: 25px;
    display: grid;
    grid-template-columns: 50px 50px 50px 50px;
    column-gap: 100px;
    padding: 90px;
    padding-left: 200px;
}
header nav a {
    text-decoration: none;
    color: var(--nav-background-color);
}
/*all*/
body{
font-family: kalam;
max-width: 100%;
padding: 20px;
}
/*rafting logo*/
img{
    width: 100%;
    height: auto;
    float:right;
    margin: 0 0 15px 15px;
    border: 0
}
.hero {
    position: relative;
}
/*first main image*/
.hero img {
    display: block;
    width: 100%;
    height: auto;
}
/* "White Water Rafting" */
.hero h1 {
    position: absolute;
    top:80px;
    text-align:center;
    left:0;
    right: 0;
    font-size:60px;
    color:#262640;}
.hero article{
    position: absolute;
    top: 150px;
    left: 0;
    right: 0;
    width: 79%;
    padding: 80px;}
/*Blue transparent box*/
.hero article p{
    background-color: #3588c0a3;
    height: 200px;
    width: 100%;
    padding: 50px;}
/*happy client*/
.hero article img{
    float:right;
    height: auto;
    width: 300px;
    padding: 60px;
    right:0;
    left:0;}
.history {
    background-color: #ddb278;
    text-align: center;
    left:0;
    right:0;}
.history h2 {
    font-size: 50px;}
/*5 images*/
.adventure {
    max-width: 100%;
    background-color: #3588C0;
    height:400px;}
.adventure h2 {
    font-size: 50px;
    text-align: center;
    width:1250px;
    padding-bottom: 200px;
    position:absolute;}
.adventure img {
    display: grid;
    grid-template-columns: 100px 100px 100px 100px 100px;
    column-gap: 90px;
    width: 150px;
    margin-right:75px;
    margin-left: 0;
    margin-top: 150px;}
.map {
    max-width: 50%;
    height: auto;}
.employees {
    height: auto;
    max-width: 50%;
    display: grid;
    grid-template-columns: 200px 200px 200px;
    column-gap: 25px;}
form {
    width: 500px;
    max-width: 100%;
    margin: 0 auto;
    padding:1rem;
    border-radius: 0.5rem;
    background-color: #afd2e9;
    display:grid;
    float:right;}
fieldset {
    display: grid;
    grid-gap: 0.5rem;
    margin: 1rem;
    border: 1px solid rgba(0, 0, 0, 0.2);
    padding: 1rem;}
legend {
    padding: 0.5rem;
    color: #262640;
    font-size: 1.3em;}
label, input, button, select, textarea {
    font-family: Kalam, handwritting;}
label {
    text-align: right;
    padding-right: 1rem;}
input, select, textarea {
    padding: 0.5rem;
    font-size: 1.1rem;}
input[type="checkbox"] {
    width: 22px;
    height: 22px;
    vertical-align: bottom;}
.one img {
    display: block;
    height: auto;
    width: 100%;}
.one article {
    background-color: #3588c0b1;
    height: 200px;
    width: 100%;
    padding: 50px;
    position:absolute;}
button {
    margin: 1rem;
    background-color: #ddb278;
    color: #fff;
    border: none;
    border-radius: 0.5rem;
    padding: 0.75rem;
    font-size: 1.2rem;}
button:hover {
    background-color: #3588c0;}
.info {
    position:absolute;
}
.three {
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-gap:20px;}
.sociallinks {
    height: auto;
    width: 50px;
    display: grid;
    grid-template-columns: 75px 75px 75px 75px;}
footer{
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    color:#262640;}
footer a {
    text-decoration: none;
    color:black;
    padding-top: 15px;}

